--- a/index.html
+++ b/index.html
@@ -894,6 +894,14 @@
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Korejski, kjongsang dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Gyeongsang_dialect" target="_blank">Gyeonsang dialect</a></td>
+        <td>애린 왕자 </td>
+        <td class="image"><a href="naslovna/korejski-kjongsang.jpg" target="_blank"><img src="naslovna_th/korejski-kjongsang.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/korejski-kjongsang.jpg" target="_blank"><img src="prva_th/korejski-kjongsang.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kumički jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kumyk_language" target="_blank">Kumyk language</a></td>
         <td>Гиччинев Пача</td>
