--- a/index.html
+++ b/index.html
@@ -1022,6 +1022,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Mozarapski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Mozarabic_language" target="_blank">Mozarabic language</a></td>
+        <td>Elli Amirellu</td>
+        <td class="image"><a href="naslovna/mozarabik.jpg" target="_blank"><img src="naslovna_th/mozarabik.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/mozarabik.jpg" target="_blank"><img src="prva_th/mozarabik.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Napolitanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Neapolitan_language" target="_blank">Neapolitan language</a></td>
         <td>'O Princepe Piccerillo</td>
