--- a/index.html
+++ b/index.html
@@ -1500,6 +1500,14 @@
         <td class="image"><a href="naslovna/vilamovski.jpg" target="_blank"><img src="naslovna_th/vilamovski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/vilamovski.jpg" target="_blank"><img src="prva_th/vilamovski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Volapik jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Volap%C3%BCk" target="_blank">Volapük language</a></td>
+        <td>Plin smalik.</td>
+        <td class="image"><a href="naslovna/volapik.jpg" target="_blank"><img src="naslovna_th/volapik.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/volapik.jpg" target="_blank"><img src="prva_th/volapik.jpg" width="50px"></a></td>
+      </tr>
 
 <!--
       <tr>
