--- a/index.html
+++ b/index.html
@@ -1046,6 +1046,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Mongolski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Mongolian_language" target="_blank">Mongolian language</a></td>
+        <td>Бяцхан Хунтайж</td>
+        <td class="image"><a href="naslovna/mongolski.jpg" target="_blank"><img src="naslovna_th/mongolski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/mongolski.jpg" target="_blank"><img src="prva_th/mongolski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Mozarapski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Mozarabic_language" target="_blank">Mozarabic language</a></td>
         <td>Elli Amirellu</td>
