--- a/index.html
+++ b/index.html
@@ -1048,7 +1048,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Mongolski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Mongolian_language" target="_blank">Mongolian language</a></td>
-        <td>Бяцхан Хунтайж</td>
+        <td>ᠪᠢᠴᠢᠬᠠᠨ ᠬᠣᠨᠩᠳᠠᠢᠵᠢ (Бяцхан Хунтайж)</td>
         <td class="image"><a href="naslovna/mongolski.jpg" target="_blank"><img src="naslovna_th/mongolski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/mongolski.jpg" target="_blank"><img src="prva_th/mongolski.jpg" width="50px"></a></td>
       </tr>
