--- a/index.html
+++ b/index.html
@@ -999,7 +999,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Majanski Kakčikel</td>
-        <td><a href="https://en.wikipedia.org/wiki/Kaqchikel_language" target="_blank">Kaqchikel language</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Kaqchikel_language" target="_blank">Mayan Kaqchikel language</a></td>
         <td>Ri ch'uti'ajpop</td>
         <td class="image"><a href="naslovna/majanskikakcikel.jpg" target="_blank"><img src="naslovna_th/majanskikakcikel.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/majanskikakcikel.jpg" target="_blank"><img src="prva_th/majanskikakcikel.jpg" width="50px"></a></td>
