--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -948,6 +948,22 @@
         <td class="image"><a href="naslovna/moliski.jpg" target="_blank"><img src="naslovna_th/moliski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/moliski.jpg" target="_blank"><img src="prva_th/moliski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Mongolski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Mongolian_language" target="_blank">Mongolian language</a></td>
+        <td>ᠪᠢᠴᠢᠬᠠᠨ ᠬᠣᠨᠩᠳᠠᠢᠵᠢ (Бяцхан Хунтайж)</td>
+        <td class="image"><a href="naslovna/mongolski.jpg" target="_blank"><img src="naslovna_th/mongolski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/mongolski.jpg" target="_blank"><img src="prva_th/mongolski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Mozarapski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Mozarabic_language" target="_blank">Mozarabic language</a></td>
+        <td>Elli Amirellu</td>
+        <td class="image"><a href="naslovna/mozarabik.jpg" target="_blank"><img src="naslovna_th/mozarabik.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/mozarabik.jpg" target="_blank"><img src="prva_th/mozarabik.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Napolitanski jezik</td>
