--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -926,6 +926,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Malajski, Kelantan-Patani (Jawi) jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Kelantan-Pattani_Malay" target="_blank">Malay, Kelantan-Pattani</a></td>
+        <td class="rtl">ڤوتراكچيل </td>
+        <td class="image"><a href="naslovna/jawi.jpg" target="_blank"><img src="naslovna_th/jawi.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/jawi.jpg" target="_blank"><img src="prva_th/jawi.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Malteški jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Maltese_language" target="_blank">Maltese language</a></td>
         <td>Iċ-Ċkejken Prinċep</td>
