--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -342,6 +342,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Srpski latinica 3D</td>
+        <td><a href="https://en.wikipedia.org/wiki/Gaj%27s_Latin_alphabet" target="_blank">Serbian Latin Pop-Up book</a></td>
+        <td>Mali princ</td>
+        <td class="image"><a href="naslovna/srpski-latinica_3d.jpg" target="_blank"><img src="naslovna_th/srpski-latinica_3d.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/srpski-latinica_3d.jpg" target="_blank"><img src="prva_th/srpski-latinica_3d.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Srpski latinica</td>
         <td><a href="https://en.wikipedia.org/wiki/Augmented_reality" target="_blank">Augmented reality</a></td>
         <td>Mali princ AR</td>
