--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -406,6 +406,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Arbereški jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Arb%C3%ABresh_language" target="_blank">Arbëresh language</a></td>
+        <td>Prinxhëpi i vogël</td>
+        <td class="image"><a href="naslovna/arbereski.jpg" target="_blank"><img src="naslovna_th/arbereski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/arbereski.jpg" target="_blank"><img src="prva_th/arbereski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Banatsko bugarski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Banat_Bulgarian_dialect" target="_blank">Banat Bulgarian dialect</a></td>
         <td>Manenija Princ</td>
