--- a/index.html
+++ b/index.html
@@ -1119,7 +1119,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Oksitanski Provansalski jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Proven%C3%A7al_dialect" target="_blank">Occitan Provencal dialect</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Proven%C3%A7al_dialect" target="_blank">Occitan Provençal dialect</a></td>
         <td>Lou Princihoun</td>
         <td class="image"><a href="naslovna/provansalski.jpg" target="_blank"><img src="naslovna_th/provansalski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/provansalski.jpg" target="_blank"><img src="prva_th/provansalski.jpg" width="50px"></a></td>
