--- a/index.html
+++ b/index.html
@@ -1102,6 +1102,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački jezik, Vogelsberg dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/German_language" target="_blank">German from Vogelsberg</a></td>
+        <td>De klee Prinz</td>
+        <td class="image"><a href="naslovna/vogelsberg.jpg" target="_blank"><img src="naslovna_th/vogelsberg.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/vogelsberg.jpg" target="_blank"><img src="prva_th/vogelsberg.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nepalski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Nepali_language" target="_blank">Nepali language</a></td>
         <td>फुच्चे राजकुमार</td>
