--- a/index.html
+++ b/index.html
@@ -1102,6 +1102,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Nemački jezik (novi prevod)</td>
+        <td><a href="https://en.wikipedia.org/wiki/German_language" target="_blank">German language</a></td>
+        <td>Der kleine Prinz</td>
+        <td class="image"><a href="naslovna/nemackinovi.jpg" target="_blank"><img src="naslovna_th/nemackinovi.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/nemackinovi.jpg" target="_blank"><img src="prva_th/nemackinovi.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Nemački jezik, Vogelsberg dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/German_language" target="_blank">German from Vogelsberg</a></td>
         <td>De klee Prinz</td>
