--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1092,6 +1092,14 @@
         <td class="image"><a href="naslovna/aranski.jpg" target="_blank"><img src="naslovna_th/aranski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/aranski.jpg" target="_blank"><img src="prva_th/aranski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Oksitanski Provansalski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Proven%C3%A7al_dialect" target="_blank">Occitan Provençal dialect</a></td>
+        <td>Lou Princihoun</td>
+        <td class="image"><a href="naslovna/provansalski.jpg" target="_blank"><img src="naslovna_th/provansalski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/provansalski.jpg" target="_blank"><img src="prva_th/provansalski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Oročki jezik</td>
