--- a/index.html
+++ b/index.html
@@ -510,6 +510,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Bribri jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bribri_language" target="_blank">Bribri language</a></td>
+        <td>Bulu' alà</td>
+        <td class="image"><a href="naslovna/bribri.jpg" target="_blank"><img src="naslovna_th/bribri.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/bribri.jpg" target="_blank"><img src="prva_th/bribri.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Bugarski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bulgarian_language" target="_blank">Bulgarian language</a></td>
         <td>Малкия принц</td>
