--- a/index.html
+++ b/index.html
@@ -878,6 +878,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Katalonski, Algereze dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Algherese_dialect" target="_blank">Catalan, Algherese dialect</a></td>
+        <td>Lo Petit Príncip</td>
+        <td class="image"><a href="naslovna/katalonskialgereze.jpg" target="_blank"><img src="naslovna_th/katalonskialgereze.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/katalonskialgereze.jpg" target="_blank"><img src="prva_th/katalonskialgereze.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kečua jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Quechuan_languages" target="_blank">Quechuan language</a></td>
         <td>Quyllur Llaqtayuq Wawawanta</td>
