--- a/index.html
+++ b/index.html
@@ -1142,6 +1142,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Ninorsk (Novonorveški) jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Nynorsk" target="_blank">Nynorsk language</a></td>
+        <td>Den vesle prinsen</td>
+        <td class="image"><a href="naslovna/ninorsk.jpg" target="_blank"><img src="naslovna_th/ninorsk.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/ninorsk.jpg" target="_blank"><img src="prva_th/ninorsk.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Oksitanski Aranski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Aranese_dialect" target="_blank">Occitan Aranese language</a></td>
         <td>Eth petit prince</td>
