--- a/index.html
+++ b/index.html
@@ -1190,6 +1190,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Papijamento jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Papiamento" target="_blank">Papiamento language</a></td>
+        <td>E Prens Chikí</td>
+        <td class="image"><a href="naslovna/papiamento.jpg" target="_blank"><img src="naslovna_th/papiamento.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/papiamento.jpg" target="_blank"><img src="prva_th/papiamento.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Persijski Farsi jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Persian_language" target="_blank">Persian language</a></td>
         <td class="rtl">شازده کوچولو</td>
