--- a/index.html
+++ b/index.html
@@ -438,6 +438,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Alzaški donji Alemanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Alsatian_dialect" target="_blank">Alsatian lower Alemanic</a></td>
+        <td>D'r kläin Prìnz</td>
+        <td class="image"><a href="naslovna/alzaskialemanski.jpg" target="_blank"><img src="naslovna_th/alzaskialemanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/alzaskialemanski.jpg" target="_blank"><img src="prva_th/alzaskialemanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Arapski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Arabic" target="_blank">Arabic language</a></td>
         <td class="rtl">الامير الصغير</td>
