--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -396,6 +396,14 @@
         <td class="image"><a href="naslovna/alhamijado.jpg" target="_blank"><img src="naslovna_th/alhamijado.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/alhamijado.jpg" target="_blank"><img src="prva_th/alhamijado.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Alzaški donji Alemanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Alsatian_dialect" target="_blank">Alsatian lower Alemanic</a></td>
+        <td>D'r kläin Prìnz</td>
+        <td class="image"><a href="naslovna/alzaskialemanski.jpg" target="_blank"><img src="naslovna_th/alzaskialemanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/alzaskialemanski.jpg" target="_blank"><img src="prva_th/alzaskialemanski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Arapski jezik</td>
