--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -476,6 +476,14 @@
         <td class="image"><a href="naslovna/brazil-portugalski.jpg" target="_blank"><img src="naslovna_th/brazil-portugalski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/brazil-portugalski.jpg" target="_blank"><img src="prva_th/brazil-portugalski.jpg" width="50px"></a></td>
       </tr>
+        <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Bribri jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Bribri_language" target="_blank">Bribri language</a></td>
+        <td>Bulu' alà</td>
+        <td class="image"><a href="naslovna/bribri.jpg" target="_blank"><img src="naslovna_th/bribri.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/bribri.jpg" target="_blank"><img src="prva_th/bribri.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Bugarski jezik</td>
