--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -652,6 +652,14 @@
         <td class="image"><a href="naslovna/starofrancuski.jpg" target="_blank"><img src="naslovna_th/starofrancuski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/starofrancuski.jpg" target="_blank"><img src="prva_th/starofrancuski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Frankoprovansalski jezik, dijalekt kantona Fribur/Frajburg</td>
+        <td><a href="https://en.wikipedia.org/wiki/Franco-Proven%C3%A7al_language" target="_blank">Franco-Provençal (Arpitan) Canton of Fribourg dialect</a></td>
+        <td>Le Piti Prinhyo</td>
+        <td class="image"><a href="naslovna/frankoprovansalskifribur.jpg" target="_blank"><img src="naslovna_th/frankoprovansalskifribur.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/frankoprovansalskifribur.jpg" target="_blank"><img src="prva_th/frankoprovansalskifribur.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Filipinski Bikol jezik</td>
