--- a/index.html
+++ b/index.html
@@ -766,6 +766,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Hantec sleng</td>
+        <td><a href="https://en.wikipedia.org/wiki/Hantec_slang" target="_blank">Hantec slang</a></td>
+        <td>Malé principál</td>
+        <td class="image"><a href="naslovna/hantec.jpg" target="_blank"><img src="naslovna_th/hantec.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/hantec.jpg" target="_blank"><img src="prva_th/hantec.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Haustek jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Huastec_language" target="_blank">Haustec language</a></td>
         <td>An Chikam Principe</td>
