--- a/index.html
+++ b/index.html
@@ -1230,6 +1230,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Pijemontski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Piedmontese_language" target="_blank">Piedmontese language</a></td>
+        <td>Ël Cit Prinsi</td>
+        <td class="image"><a href="naslovna/pijemontski.jpg" target="_blank"><img src="naslovna_th/pijemontski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/pijemontski.jpg" target="_blank"><img src="prva_th/pijemontski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Poljski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Polish_language" target="_blank">Polish language</a></td>
         <td>Mały Książę</td>
