--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -726,6 +726,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Hantec sleng</td>
+        <td><a href="https://en.wikipedia.org/wiki/Hantec_slang" target="_blank">Hantec slang</a></td>
+        <td>Malé principál</td>
+        <td class="image"><a href="naslovna/hantec.jpg" target="_blank"><img src="naslovna_th/hantec.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/hantec.jpg" target="_blank"><img src="prva_th/hantec.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Haustek jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Huastec_language" target="_blank">Haustec language</a></td>
         <td>An Chikam Principe</td>
@@ -1179,6 +1187,14 @@
         <td class="rtl">شازده کوچولو</td>
         <td class="image"><a href="naslovna/farsi.jpg" target="_blank"><img src="naslovna_th/farsi.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/farsi.jpg" target="_blank"><img src="prva_th/farsi.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Pijemontski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Piedmontese_language" target="_blank">Piedmontese language</a></td>
+        <td>Ël Cit Prinsi</td>
+        <td class="image"><a href="naslovna/pijemontski.jpg" target="_blank"><img src="naslovna_th/pijemontski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/pijemontski.jpg" target="_blank"><img src="prva_th/pijemontski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
