--- a/index.html
+++ b/index.html
@@ -870,6 +870,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Jermenski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Armenian_language" target="_blank">Arenian language</a></td>
+        <td>Փոքրիկ_իշխանը</td>
+        <td class="image"><a href="naslovna/jermenski.jpg" target="_blank"><img src="naslovna_th/jermenski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/jermenski.jpg" target="_blank"><img src="prva_th/jermenski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Kabardinski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Kabardian_language" target="_blank">Kabardian language</a></td>
         <td>Пщы Нэнау</td>
