--- a/index.html
+++ b/index.html
@@ -478,6 +478,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Batanga jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tanga_language" target="_blank">Tanga language</a></td>
+        <td>Muna Kaïsa</td>
+        <td class="image"><a href="naslovna/batanga.jpg" target="_blank"><img src="naslovna_th/batanga.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/batanga.jpg" target="_blank"><img src="prva_th/batanga.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Beloruski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Belarusian_language" target="_blank">Belarusian language</a></td>
         <td>Маленькі прынц</td>
