--- a/index.html
+++ b/index.html
@@ -574,6 +574,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Cirišku nemački jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Z%C3%BCrich_German" target="_blank">Zürich German</a></td>
+        <td>De chlii Prinz</td>
+        <td class="image"><a href="naslovna/ciriski.jpg" target="_blank"><img src="naslovna_th/ciriski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/ciriski.jpg" target="_blank"><img src="prva_th/ciriski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Čečenski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Chechen_language" target="_blank">Chechen language</a></td>
         <td>Жима Эла</td>
