--- a/index.html
+++ b/index.html
@@ -563,15 +563,7 @@
         <td>မင်းသားသေ</td>
         <td class="image"><a href="naslovna/burmanski.jpg" target="_blank"><img src="naslovna_th/burmanski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/burmanski.jpg" target="_blank"><img src="prva_th/burmanski.jpg" width="50px"></a></td>
-      </tr>
-      <tr>
-        <td class="number"><span class="auto"></span></td>
-        <td>Chavakano jezik</td>
-        <td><a href="https://en.wikipedia.org/wiki/Chavacano" target="_blank">Chavacano language</a></td>
-        <td>El Diutay principe </td>
-        <td class="image"><a href="naslovna/chavacano.jpg" target="_blank"><img src="naslovna_th/chavacano.jpg" width="50px"></a></td>
-        <td class="image"><a href="prva/chavacano.jpg" target="_blank"><img src="prva_th/chavacano.jpg" width="50px"></a></td>
-      </tr>
+      </tr> 
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Cirišku nemački jezik</td>
@@ -579,6 +571,14 @@
         <td>De chlii Prinz</td>
         <td class="image"><a href="naslovna/ciriski.jpg" target="_blank"><img src="naslovna_th/ciriski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/ciriski.jpg" target="_blank"><img src="prva_th/ciriski.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Čavakano jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Chavacano" target="_blank">Chavacano language</a></td>
+        <td>El Diutay principe </td>
+        <td class="image"><a href="naslovna/chavacano.jpg" target="_blank"><img src="naslovna_th/chavacano.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/chavacano.jpg" target="_blank"><img src="prva_th/chavacano.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
