--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@
       </tr> 
       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Cirišku nemački jezik</td>
+        <td>Ciriški nemački jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Z%C3%BCrich_German" target="_blank">Zürich German</a></td>
         <td>De chlii Prinz</td>
         <td class="image"><a href="naslovna/ciriski.jpg" target="_blank"><img src="naslovna_th/ciriski.jpg" width="50px"></a></td>
