--- a/index.html
+++ b/index.html
@@ -1606,7 +1606,7 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Valensijanski jeyik</td>
+        <td>Valensijanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Valencian_language" target="_blank">Valencian language</a></td>
         <td>El Chicotet Príncip</td>
         <td class="image"><a href="naslovna/valensijanski.jpg" target="_blank"><img src="naslovna_th/valensijanski.jpg" width="50px"></a></td>
