--- a/index.html
+++ b/index.html
@@ -718,6 +718,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Frankoprovansalski jezik, dijalekt kantona Vo</td>
+        <td><a href="https://en.wikipedia.org/wiki/Franco-Proven%C3%A7al" target="_blank">Franco-Provençal Canton of Vaud dialect</a></td>
+        <td>Lo Pitit Prinço</td>
+        <td class="image"><a href="naslovna/frankoprovansalskivo.jpg" target="_blank"><img src="naslovna_th/frankoprovansalskivo.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/frankoprovansalskivo.jpg" target="_blank"><img src="prva_th/frankoprovansalskivo.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Filipinski Bikol jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Bikol_languages" target="_blank">Filipino Bikol Language</a></td>
         <td>An Sadit na Prinsipe</td>
