--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -436,6 +436,14 @@
         <td class="image"><a href="naslovna/baskirski.jpg" target="_blank"><img src="naslovna_th/baskirski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/baskirski.jpg" target="_blank"><img src="prva_th/baskirski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Batanga jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Tanga_language" target="_blank">Tanga language</a></td>
+        <td>Muna Kaïsa</td>
+        <td class="image"><a href="naslovna/batanga.jpg" target="_blank"><img src="naslovna_th/batanga.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/batanga.jpg" target="_blank"><img src="prva_th/batanga.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Beloruski jezik</td>
