--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -526,7 +526,7 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Chavakano jezik</td>
+        <td>Čavakano jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Chavacano" target="_blank">Chavacano language</a></td>
         <td>El Diutay principe </td>
         <td class="image"><a href="naslovna/chavacano.jpg" target="_blank"><img src="naslovna_th/chavacano.jpg" width="50px"></a></td>
