--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -526,6 +526,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Ciriški nemački jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Z%C3%BCrich_German" target="_blank">Zürich German</a></td>
+        <td>De chlii Prinz</td>
+        <td class="image"><a href="naslovna/ciriski.jpg" target="_blank"><img src="naslovna_th/ciriski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/ciriski.jpg" target="_blank"><img src="prva_th/ciriski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Čavakano jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Chavacano" target="_blank">Chavacano language</a></td>
         <td>El Diutay principe </td>
