--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -676,6 +676,14 @@
         <td class="image"><a href="naslovna/frankoprovansalskifribur.jpg" target="_blank"><img src="naslovna_th/frankoprovansalskifribur.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/frankoprovansalskifribur.jpg" target="_blank"><img src="prva_th/frankoprovansalskifribur.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Frankoprovansalski jezik, dijalekt kantona Vo</td>
+        <td><a href="https://en.wikipedia.org/wiki/Franco-Proven%C3%A7al" target="_blank">Franco-Provençal Canton of Vaud dialect</a></td>
+        <td>Lo Pitit Prinço</td>
+        <td class="image"><a href="naslovna/frankoprovansalskivo.jpg" target="_blank"><img src="naslovna_th/frankoprovansalskivo.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/frankoprovansalskivo.jpg" target="_blank"><img src="prva_th/frankoprovansalskivo.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Filipinski Bikol jezik</td>
