--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -852,6 +852,14 @@
         <td class="image"><a href="naslovna/japanski.jpg" target="_blank"><img src="naslovna_th/japanski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/japanski.jpg" target="_blank"><img src="prva_th/japanski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Jermenski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Armenian_language" target="_blank">Armenian language</a></td>
+        <td>Փոքրիկ_իշխանը</td>
+        <td class="image"><a href="naslovna/jermenski.jpg" target="_blank"><img src="naslovna_th/jermenski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/jermenski.jpg" target="_blank"><img src="prva_th/jermenski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Kabardinski jezik</td>
