--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1574,6 +1574,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Valensijanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Valencian_language" target="_blank">Valencian language</a></td>
+        <td>El Chicotet Príncip</td>
+        <td class="image"><a href="naslovna/valensijanski.jpg" target="_blank"><img src="naslovna_th/valensijanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/valensijanski.jpg" target="_blank"><img src="prva_th/valensijanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Venecijanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Venetian_language" target="_blank">Venetian Lower Veronese language</a></td>
         <td>El Principe Butin</td>
