--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1582,6 +1582,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Valserski nemački jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Walser_German" target="_blank">Walser German language</a></td>
+        <td>Der chlii Prinz</td>
+        <td class="image"><a href="naslovna/valserski.jpg" target="_blank"><img src="naslovna_th/valserski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/valserski.jpg" target="_blank"><img src="prva_th/valserski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Venecijanski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Venetian_language" target="_blank">Venetian Lower Veronese language</a></td>
         <td>El Principe Butin</td>
