--- a/index.html
+++ b/index.html
@@ -1364,6 +1364,14 @@
         <td class="image"><a href="naslovna/ruski.jpg" target="_blank"><img src="naslovna_th/ruski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/ruski.jpg" target="_blank"><img src="prva_th/ruski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Sambaša jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Sambahsa" target="_blank">Sambahsa language</a></td>
+        <td>Is Lytil prince</td>
+        <td class="image"><a href="naslovna/sambasa.jpg" target="_blank"><img src="naslovna_th/sambasa.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/sambasa.jpg" target="_blank"><img src="prva_th/sambasa.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Sango jezik</td>
