--- a/index.html
+++ b/index.html
@@ -1368,7 +1368,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Sambaša jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Sambahsa" target="_blank">Sambahsa language</a></td>
-        <td>Is Lytil prince</td>
+        <td>Is Lytil Prince</td>
         <td class="image"><a href="naslovna/sambasa.jpg" target="_blank"><img src="naslovna_th/sambasa.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/sambasa.jpg" target="_blank"><img src="prva_th/sambasa.jpg" width="50px"></a></td>
       </tr>
