--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Kasino dijalekt</td>
-        <td><a href="https://en.wikipedia.org/wiki/Cassino" target="_blank">Italian, Cassino dialect</a></td>
+        <td><a href="https://en.wikipedia.org/wiki/Cassino" target="_blank">Italian, cassinese dialect</a></td>
         <td>Gliu Princ'p Picc'rigl</td>
         <td class="image"><a href="naslovna/italijanskikasino.jpg" target="_blank"><img src="naslovna_th/italijanskikasino.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/italijanskikasino.jpg" target="_blank"><img src="prva_th/italijanskikasino.jpg" width="50px"></a></td>
