--- a/index.html
+++ b/index.html
@@ -484,6 +484,14 @@
         <td class="image"><a href="naslovna/arbereski.jpg" target="_blank"><img src="naslovna_th/arbereski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/arbereski.jpg" target="_blank"><img src="prva_th/arbereski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Asturijski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Asturian_language" target="_blank">Asturian language</a></td>
+        <td>El Principin</td>
+        <td class="image"><a href="naslovna/asturijski.jpg" target="_blank"><img src="naslovna_th/asturijski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/asturijski.jpg" target="_blank"><img src="prva_th/asturijski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Banatsko bugarski dijalekt</td>
