--- a/index.html
+++ b/index.html
@@ -500,6 +500,14 @@
         <td class="image"><a href="naslovna/banatsko-bugarski.jpg" target="_blank"><img src="naslovna_th/banatsko-bugarski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/banatsko-bugarski.jpg" target="_blank"><img src="prva_th/banatsko-bugarski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Baskijski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Basque_language" target="_blank">Basque language</a></td>
+        <td>Printze txikia</td>
+        <td class="image"><a href="naslovna/baskijski.jpg" target="_blank"><img src="naslovna_th/baskijski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/baskijski.jpg" target="_blank"><img src="prva_th/baskijski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Baškirski jezik</td>
