--- a/index.html
+++ b/index.html
@@ -884,6 +884,14 @@
         <td class="image"><a href="naslovna/hrvatski-kajkavski.jpg" target="_blank"><img src="naslovna_th/hrvatski-kajkavski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/hrvatski-kajkavski.jpg" target="_blank"><img src="prva_th/hrvatski-kajkavski.jpg" width="50px"></a></td>
       </tr>
+        <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Indonežanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Indonesian_language" target="_blank">Indonesian language</a></td>
+        <td>Si Pangeran Kecil</td>
+        <td class="image"><a href="naslovna/indonezanski.jpg" target="_blank"><img src="naslovna_th/indonezanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/indonezanski.jpg" target="_blank"><img src="prva_th/indonezanski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Irski jezik</td>
