--- a/index.html
+++ b/index.html
@@ -1560,7 +1560,7 @@
         <td class="number"><span class="auto"></span></td>
         <td>Tadžički jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Tajik_language" target="_blank">Tajik language</a></td>
-         <td>Шаӽзода Кучулу<><span class="rtl">شــــازده كوچـولـو </span></td>
+         <td>Шаӽзода Кучулу<span class="rtl">شــــازده كوچـولـو </span></td>
         <td class="image"><a href="naslovna/tadzicki.jpg" target="_blank"><img src="naslovna_th/tadzicki.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/tadzicki.jpg" target="_blank"><img src="prva_th/tadzicki.jpg" width="50px"></a></td>
       </tr>
