--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -814,6 +814,22 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Indonežanski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Indonesian_language" target="_blank">Indonesian language</a></td>
+        <td>Si Pangeran Kecil</td>
+        <td class="image"><a href="naslovna/indonezanski.jpg" target="_blank"><img src="naslovna_th/indonezanski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/indonezanski.jpg" target="_blank"><img src="prva_th/indonezanski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Indonežanski jezik (Van Ophujsenov pravopisni sistem)</td>
+        <td><a href="https://en.wikipedia.org/wiki/Van_Ophuijsen_Spelling_System" target="_blank">Indonesian language (Van Ophuijsen Spelling system)</a></td>
+        <td>Sang Pangeran Ketjil</td>
+        <td class="image"><a href="naslovna/indonezanskiholandski.jpg" target="_blank"><img src="naslovna_th/indonezanskiholandski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/indonezanskiholandski.jpg" target="_blank"><img src="prva_th/indonezanskiholandski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Irski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Irish_language" target="_blank">Irish language</a></td>
         <td>An prionsa Beag</td>
