--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -430,6 +430,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Asturijski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Asturian_language" target="_blank">Asturian language</a></td>
+        <td>El Principin</td>
+        <td class="image"><a href="naslovna/asturijski.jpg" target="_blank"><img src="naslovna_th/asturijski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/asturijski.jpg" target="_blank"><img src="prva_th/asturijski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Banatsko bugarski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Banat_Bulgarian_dialect" target="_blank">Banat Bulgarian dialect</a></td>
         <td>Manenija Princ</td>
