--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -924,6 +924,14 @@
         <td class="image"><a href="naslovna/kabardinski.jpg" target="_blank"><img src="naslovna_th/kabardinski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/kabardinski.jpg" target="_blank"><img src="prva_th/kabardinski.jpg" width="50px"></a></td>
       </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Kabilski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Kabyle_language" target="_blank">Kabyle language</a></td>
+        <td>Ageldun amecṭuḥ</td>
+        <td class="image"><a href="naslovna/kabilski.jpg" target="_blank"><img src="naslovna_th/kabilski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/kabilski.jpg" target="_blank"><img src="prva_th/kabilski.jpg" width="50px"></a></td>
+      </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Karenski jezik</td>
