--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -886,6 +886,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Italijanski, Kasino dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Cassino" target="_blank">Italian, Cassinese dialect</a></td>
+        <td>Gliu Princ'p Picc'rigl</td>
+        <td class="image"><a href="naslovna/italijanskikasino.jpg" target="_blank"><img src="naslovna_th/italijanskikasino.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/italijanskikasino.jpg" target="_blank"><img src="prva_th/italijanskikasino.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Italijanski, Milanski dijalekt</td>
         <td><a href="https://en.wikipedia.org/wiki/Milanese_dialect" target="_blank">Italian, Milanese dialect</a></td>
         <td>El princip Piscinin</td>
