--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1388,7 +1388,15 @@
         <td class="image"><a href="naslovna/ruski.jpg" target="_blank"><img src="naslovna_th/ruski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/ruski.jpg" target="_blank"><img src="prva_th/ruski.jpg" width="50px"></a></td>
       </tr>
-       <tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Sambaša jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Sambahsa" target="_blank">Sambahsa language</a></td>
+        <td>Is Lytil Prince</td>
+        <td class="image"><a href="naslovna/sambasa.jpg" target="_blank"><img src="naslovna_th/sambasa.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/sambasa.jpg" target="_blank"><img src="prva_th/sambasa.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Sango jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Sango_language" target="_blank">Sango language</a></td>
