--- a/index.html
+++ b/index.html
@@ -1278,6 +1278,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Odžibva jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Ojibwe_language" target="_blank">Ojibwe language</a></td>
+        <td>Ogimaans</td>
+        <td class="image"><a href="naslovna/odzibva.jpg" target="_blank"><img src="naslovna_th/odzibva.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/odzibva.jpg" target="_blank"><img src="prva_th/odzibva.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Oksitanski Aranski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Aranese_dialect" target="_blank">Occitan Aranese language</a></td>
         <td>Eth petit prince</td>
