--- a/index.html
+++ b/index.html
@@ -1406,6 +1406,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Romanjolski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Romagnol_dialects" target="_blank">Romagnol language</a></td>
+        <td>E' prinzipì</td>
+        <td class="image"><a href="naslovna/romanjolski.jpg" target="_blank"><img src="naslovna_th/romanjolski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/romanjolski.jpg" target="_blank"><img src="prva_th/romanjolski.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Romski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Romani_language" target="_blank">Romani language</a></td>
         <td>O cino krajoro</td>
