--- a/novo/spisak.html
+++ b/novo/spisak.html
@@ -1238,6 +1238,14 @@
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
+        <td>Odžibva jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Ojibwe_language" target="_blank">Ojibwe language</a></td>
+        <td>Ogimaans</td>
+        <td class="image"><a href="naslovna/odzibva.jpg" target="_blank"><img src="naslovna_th/odzibva.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/odzibva.jpg" target="_blank"><img src="prva_th/odzibva.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
         <td>Oksitanski Aranski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Aranese_dialect" target="_blank">Occitan Aranese language</a></td>
         <td>Eth petit prince</td>
@@ -1355,6 +1363,14 @@
         <td>Ař Picin Prinsi</td>
         <td class="image"><a href="naslovna/royase.jpg" target="_blank"><img src="naslovna_th/royase.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/royase.jpg" target="_blank"><img src="prva_th/royase.jpg" width="50px"></a></td>
+      </tr>
+      <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Romanjolski jezik</td>
+        <td><a href="https://en.wikipedia.org/wiki/Romagnol_dialects" target="_blank">Romagnol language</a></td>
+        <td>E' prinzipì</td>
+        <td class="image"><a href="naslovna/romanjolski.jpg" target="_blank"><img src="naslovna_th/romanjolski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/romanjolski.jpg" target="_blank"><img src="prva_th/romanjolski.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
