--- a/index.html
+++ b/index.html
@@ -1681,8 +1681,8 @@
         <td>Turski jezik na staroturkijskom pismu</td>
         <td><a href="https://en.wikipedia.org/wiki/Old_Turkic_script" target="_blank">Old Turkic script</a></td>
         <td>𐰚𐰇𐰲𐰜 𐰯𐰃𐰼𐰀𐰤𐰾</td>
-        <td class="image"><a href="naslovna/turskirunik.jpg" target="_blank"><img src="naslovna_th/turskiruni.jpg" width="50px"></a></td>
-        <td class="image"><a href="prva/turskiruni.jpg" target="_blank"><img src="prva_th/turskiruni.jpg" width="50px"></a></td>
+        <td class="image"><a href="naslovna/turskirunik.jpg" target="_blank"><img src="naslovna_th/turskirunik.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/turskirunik.jpg" target="_blank"><img src="prva_th/turskirunik.jpg" width="50px"></a></td>
       </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
