--- a/index.html
+++ b/index.html
@@ -1694,7 +1694,15 @@
       </tr>
        <tr>
         <td class="number"><span class="auto"></span></td>
-        <td>Tursko kiparski jezik</td>
+        <td>Turski, istočnotrački dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Turkish_dialects" target="_blank">Eastern Thracian dialects</a></td>
+        <td>Küçük Pirens</td>
+        <td class="image"><a href="naslovna/turskitrakijski.jpg" target="_blank"><img src="naslovna_th/turskitrakijski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/turskitrakijski.jpg" target="_blank"><img src="prva_th/turskitrakijski.jpg" width="50px"></a></td>
+      </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Turski kiparski jezik</td>
         <td><a href="https://en.wikipedia.org/wiki/Turkish_Cypriots" target="_blank">Turkish Cypriots</a></td>
         <td>Güçük Prens</td>
         <td class="image"><a href="naslovna/turski-kiparski.jpg" target="_blank"><img src="naslovna_th/turski-kiparski.jpg" width="50px"></a></td>
