--- a/index.html
+++ b/index.html
@@ -964,6 +964,14 @@
         <td class="image"><a href="naslovna/jermenski.jpg" target="_blank"><img src="naslovna_th/jermenski.jpg" width="50px"></a></td>
         <td class="image"><a href="prva/jermenski.jpg" target="_blank"><img src="prva_th/jermenski.jpg" width="50px"></a></td>
       </tr>
+       <tr>
+        <td class="number"><span class="auto"></span></td>
+        <td>Jermenski, Hemšinski dijalekt</td>
+        <td><a href="https://en.wikipedia.org/wiki/Homshetsi_dialect" target="_blank">Armenian, Homshetsi dialect</a></td>
+        <td>Bidzig Pirens</td>
+        <td class="image"><a href="naslovna/jermenskohemsinski.jpg" target="_blank"><img src="naslovna_th/jermenskohemsinski.jpg" width="50px"></a></td>
+        <td class="image"><a href="prva/jermenskohemsinski.jpg" target="_blank"><img src="prva_th/jermenskohemsinski.jpg" width="50px"></a></td>
+      </tr>
       <tr>
         <td class="number"><span class="auto"></span></td>
         <td>Jermenski, Zapadnojermenski jezik</td>
